# Tennis

./: .gitignore  DOCUMENTACAO.md  category.py  classification.py  fileReader.py  fileSave.py  groupClassification.py  match.py  matchKey.py  matchTeams.py  pdfExporter.py  pyproject.toml  ranking.py  run_tests.py  tennisEnums.py  tennisExceptions.py  tennisHelper.py  test_elimination_flag.py  test_game_balance.py  test_import_order.py  test_score_validation.py  tests.py  tournament.py
GoogleSheets/: googleSheetsUtils.py  playersImport.py  tournamentExport.py
Interface/: changeCategoryWindow.py  classificationCriteriaSelector.py  classificationTables.py  exportTournamentWindow.py  interfaceUtils.py  matchesTable.py  newCategoryWindow.py  newTeamWindow.py  newTournamentWindow.py  playersImportWindow.py  resultPointsSelector.py  theme.py  tournamentApp.py  updateClassificationCriteriaWindow.py  updateGroupClassificationWindow.py  updateResultPointsWindow.py
TestData/: RankingExample1.csv  TournamentDoublesExample1.txt  TournamentDoublesExample1Output.txt  TournamentDoublesExample2.txt  TournamentDoublesExample3.txt  TournamentDoublesExample3Output.txt  TournamentDoublesExample4.txt  TournamentDoublesExample5.txt  TournamentExample1.txt  TournamentExample1Output.txt  TournamentExample1Output2.txt  TournamentExample2.txt  TournamentExample2Output.txt  TournamentExample3.txt  TournamentExample3Output.txt  TournamentExample4.txt  TournamentExample4Output.txt  TournamentExample5.txt  TournamentExample5Output.txt  TournamentExample6.txt  TournamentExample6Output.txt  teste.txt  (+2 more)
(+33 files in other folders)
